# PPN-KLULES

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  init.cc  kulesh-util.cc  kulesh.cc  lulesh-comm.cc  lulesh-comm.h  lulesh-eos.cc  lulesh-geometry.cc  lulesh-init.cc  lulesh-init.h  lulesh-integration.cc  lulesh-kinematics.cc  lulesh-kinematics.h  lulesh-nodal.cc  lulesh-nodal.h  lulesh-stress.cc  lulesh-timestep.cc  lulesh-timestep.h  lulesh-util.cc  lulesh-util.h  lulesh-viscosity.cc  lulesh-viz.cc  lulesh-viz.h  lulesh.cc  lulesh.h  tuple.h
S1_Project/: .gitignore  CMakeLists.txt  Makefile  STATUS.md  lulesh-init.cc  lulesh-util.cc  lulesh.cc  lulesh.h
S1_Project/includes/: cycle.h
S1_Project/test/: build_master_table.py  dual_axis_fom_overhead.py  lulesh_master_table.csv  parse_lulesh.py  plot_advanced.py  plot_lulesh.py  summary_s100.csv  summary_s30.csv  summary_s50.csv
S1_Project/test/data/baseline/: base_s100_t16.txt  base_s100_t24.txt  base_s100_t32.txt  base_s100_t4.txt  base_s100_t8.txt  base_s30_t16.txt  base_s30_t24.txt  base_s30_t32.txt  base_s30_t4.txt  base_s30_t8.txt  base_s50_t16.txt  base_s50_t24.txt  base_s50_t32.txt  base_s50_t4.txt  base_s50_t8.txt
S1_Project/test/data/kokkos/: kokkos_s100_t16.txt  kokkos_s100_t24.txt  kokkos_s100_t32.txt  kokkos_s100_t4.txt  kokkos_s100_t8.txt  kokkos_s30_t16.txt  kokkos_s30_t24.txt  kokkos_s30_t32.txt  kokkos_s30_t4.txt  kokkos_s30_t8.txt  kokkos_s50_t16.txt  kokkos_s50_t24.txt  kokkos_s50_t32.txt  kokkos_s50_t4.txt  kokkos_s50_t8.txt
apps/: lulesh_main.cc
include/: lulesh-eos.h  lulesh-geometry.h  lulesh-init.h  lulesh-integration.h  lulesh-kinematics.h  lulesh-nodal.h  lulesh-stress.h  lulesh-timestep.h  lulesh-util.h  lulesh-viscosity.h  lulesh.h
reports/: 2026-W10-fr.md  2026-W10-zh.md
samples/: lulesh_profile_sample.txt  lulesh_test_sample.txt
scripts/: .gitattributes  build.sh  run.sh
src/: lulesh-eos.cc  lulesh-geometry.cc  lulesh-init.cc  lulesh-integration.cc  lulesh-kinematics.cc  lulesh-nodal.cc  lulesh-stress.cc  lulesh-timestep.cc  lulesh-util.cc  lulesh-viscosity.cc  lulesh.cc
study/kokkos/: comm.cc  init.cc  kulesh-util.cc  kulesh.h
tests/baselines/: README
